fixed the z-index on the progress bar

--- a/src/styles/Research.module.css
+++ b/src/styles/Research.module.css
@@ -5,7 +5,7 @@
   height: 5px;
   width: var(--progress);
   background-color: #f6a801;
-  z-index: 50;
+  z-index: 40;
   /* margin-top: 4.5rem; */
-  @apply top-14;
+  @apply top-[3.7rem];
 }
